Updates from mockups and meeting

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,9 +6,9 @@
        <div class="container">
             <div class="row py-5">
                 <div class="col-12">
-                    <img src="/images/bidvest-logo-white.png" alt="" height="50" class="mb-4">
-                    <p class="text-white mb-5">It is the old motor industry adage that people buy from people, but these days we know that people only buy from the BEST people and there is no better than at McCarthy Toyota Midrand. For all your motor needs; from Purchasing your Brand New Toyota, to servicing it and using Toyota genuine Parts, to our wide range of Pre-Owned vehicles you can be guaranteed that you will be dealing with the right people.</p>
-                    <a href="/dealers" class="btn btn-secondary text-uppercase text-center-xs d-block-xs mx-auto">Find a Bidvest McCarthy Dealership</a>
+                    <img src="/images/bidvest-logo-white.png" alt="" class="my-4">
+                    <p class="h5 text-white mb-5 light">It is the old motor industry adage that people buy from people, but these days we know that people only buy from the BEST people and there is no better than at McCarthy Toyota Midrand. For all your motor needs; from Purchasing your Brand New Toyota, to servicing it and using Toyota genuine Parts, to our wide range of Pre-Owned vehicles you can be guaranteed that you will be dealing with the right people.</p>
+                    <a href="/dealers" class="btn btn-secondary text-uppercase text-center-xs d-block-xs mx-auto">View Dealerships</a>
                 </div>
             </div>
         </div>
@@ -39,7 +39,7 @@
             <div class="row my-4">
                 <div class="col">
                     <div class="display-4">Latest Specials</div>
-                    <div class="h5 light text-uppercase">25 January 2017</div>
+                    <div class="h5 light text-uppercase" id="showdate"></div>
                 </div>
             </div>
             @Html.Partial("specials-listings")
@@ -98,7 +98,7 @@
                     </div>
                     <div class="row mb-4">
                         <div class="col">
-                            <a href="javascript:void(0)" class="btn btn-secondary mb-3 mx-auto d-block-xs mx-md-4">Apply for Bidvest Insurance</a>
+                            <a href="javascript:void(0)" class="btn btn-outline-secondary  mb-3 mx-auto d-block-xs mx-md-4">View Bidvest Insurance</a>
                         </div>
                     </div>          
                 </div>  
@@ -134,7 +134,7 @@
                     </div>
                     <div class="row my-3">
                         <div class="col">
-                            <a href="javascript:void(0)" class="btn btn-secondary mb-3 d-block-xs mx-md-4">Join Bidvest Club McCarthy</a>
+                            <a href="javascript:void(0)" class="btn btn-outline-secondary mb-3 d-block-xs mx-md-4">View Club McCarthy</a>
                             <p class="p font-weight-bold small text-center-xs mb-4 mx-lg-4">Get 1 Year free membership with every Lexus purchase</p>
                         </div>
                     </div>    
