--- a/Views/Home/dealer-detail.cshtml
+++ b/Views/Home/dealer-detail.cshtml
@@ -19,9 +19,9 @@
     <section class="dealer-info">
         <div class="container-fluid">
             <div class="row text-center-xs">
-                <div class="col-12 col-lg-6 pt-5 bg-dark text-white mx-auto pb-4">
+                <div class="col-12 col-lg-6 pt-5 bg-dark text-white mx-auto pb-4 pl-5">
                     <img src="/images/bidvest-logo-white.png" alt="" class="d-block-xs mx-auto py-3">
-                    <span class="display-4 text-uppercase">Midrand</span>
+                    <span class="display-4 text-uppercase d-block">Lexus Midrand</span>
                     <span class="h2 d-block"><img src="/images/phone-white.png" alt=""> 012 231 4123</span>
                     <span class="d-block">1682 New Rd</span>
                     <span class="d-block">Carswald</span>
@@ -35,7 +35,7 @@
     </section>
     <section class="models">
         <div class="container-fluid">
-            <div class="row mt-5">
+            <div class="row mt-5 dealer-cars">
                 <div class="col">
                     <h2 class="display-4">New Cars</h2>
                     <span></span>
@@ -57,7 +57,7 @@
        <div class="row mt-5">
             <div class="col">
                 <div class="h2 text-uppercase">More specials from this dealer</div>
-                <div class="h5 light text-uppercase">25 January 2017</div>
+                <div class="h5 light text-uppercase" id="showdate"></div>
             </div>
         </div>
         <div class="row">
