--- a/Views/Home/dealers.cshtml
+++ b/Views/Home/dealers.cshtml
@@ -22,14 +22,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-lg-5">
                     <div class="row mx-auto text-center mb-4">
-                        <div class="col-12">
+                        <div class="col-12 col-md-6 col-lg-12">
                             <a href="/dealer-detail">
                                 <div class="card text-left mb-4">
                                     <div class="card-header">
                                         <span class="h3 text-uppercase">Midrand</span>
-                                        <img src="/images/bidvest-logo-white.png" alt="" class="float-right">
+                                        <img src="/images/bidvest-logo-white.png" alt="" height="40" class="float-right">
                                     </div>
                                     <div class="card-body">
                                         <span class="d-block">1682 New Rd</span>
@@ -42,12 +42,12 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 col-md-6 col-lg-12">
                             <a href="/dealer-detail">
                                 <div class="card text-left mb-4">
                                     <div class="card-header">
                                         <span class="h3 text-uppercase">Kingsmead</span>
-                                        <img src="/images/bidvest-logo-white.png" alt="" class="float-right">
+                                        <img src="/images/bidvest-logo-white.png" alt="" height="40" class="float-right">
                                     </div>
                                     <div class="card-body">
                                         <span class="d-block">1682 New Rd</span>
@@ -60,12 +60,13 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-12">
+                        
+                        <div class="col-12 col-md-6 col-lg-12">
                             <a href="/dealer-detail">
                                 <div class="card text-left">
                                     <div class="card-header">
-                                        <span class="h3 text-uppercase">Lynwood</span>
-                                        <img src="/images/bidvest-logo-white.png" alt="" class="float-right">
+                                        <span class="h3 text-uppercase">Lynnwood</span>
+                                        <img src="/images/bidvest-logo-white.png" alt="" height="40" class="float-right">
                                     </div>
                                     <div class="card-body">
                                         <span class="d-block">1682 New Rd</span>
