--- a/Views/Home/models.cshtml
+++ b/Views/Home/models.cshtml
@@ -6,13 +6,14 @@
 <div class="models">
     <section class="section sedans" id="sedans">
        <div class="stitch-2 d-none d-md-block"></div>
-        <div class="container px-5">
-            <div class="row my-5 text-xs-center text-left">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="container px-md-5">
+            <div class="row my-5 text-center-xs">
+                <div class="col-12 col-md-4 col-lg-3">
                   <h1 class="display-4">Sedans</h1>  
                 </div>
-                <div class="col-12 col-sm-6 col-md-5"> 
-                <span class="h4 light">Ride comfortably an in style with Lexus' wide range of sedans</span>  </div>
+                <div class="col-12 col-md-4"> 
+                    <span class="h4 light">Ride comfortably an in style with Lexus' wide range of sedans</span>  
+                </div>
             </div>
             <div class="row">
                 <div class="col">
@@ -57,23 +58,23 @@
                         </ul>
                     </div>
                     <div class="car-model-pic mx-auto">
-                      <img src="/images/IS-1.png" alt="" class="img-fluid">  
-                      <img src="/images/IS-2.png" alt="" class="img-fluid">  
-                      <img src="/images/IS-3.png" alt="" class="img-fluid">  
+                        <img src="/images/IS-1.png" alt="" onclick="location.href='/model-name';"><span><i></i>IS</span><span>R609 900</span>
+                        <img src="/images/IS-2.png" alt="" onclick="location.href='/model-name';"><span><i></i>ES</span><span>R559 700</span>  
+                        <img src="/images/IS-3.png" alt="" onclick="location.href='/model-name';"><span><i></i>ES</span><span>R670 700</span> 
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <section class="section suvs angle--both-left-left" id="suvs">
-       <div class="stitch-3 d-none d-sm-block"></div>
-       <div class="stitch-4 d-none d-sm-block"></div>
-        <div class="container px-5">
-            <div class="row my-5 text-xs-center">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+       <div class="stitch-3 d-none d-md-block"></div>
+       <div class="stitch-4 d-none d-md-block"></div>
+        <div class="container px-md-5">
+            <div class="row my-5 text-center-xs">
+                <div class="col-12 col-md-4 col-lg-3">
                   <h1 class="display-4">SUVS</h1>  
                 </div>
-                <div class="col-12 col-sm-4"> 
+                <div class="col-12 col-md-4"> 
                 <span class="h4 light">When SUV crosses elegantly into the world of Lexus' luxury</span>  </div>
             </div>
             <div class="row">
@@ -109,9 +110,9 @@
                         </ul>    
                     </div> 
                     <div class="car-model-pic mx-auto">
-                      <img src="/images/rx-1.png" alt="" class="img-fluid d-block">  
-                      <img src="/images/rx-2.png" alt="" class="img-fluid">  
-                      <img src="/images/rx-3.png" alt="" class="img-fluid">  
+                        <img src="/images/rx-1.png" alt="" onclick="location.href='/model-name';"><i></i><span>ES</span><span>R559 700</span>
+                        <img src="/images/rx-2.png" alt="" onclick="location.href='/model-name';"><i></i><span>ES</span><span>R670 900</span>  
+                        <img src="/images/rx-3.png" alt="" onclick="location.href='/model-name';"><i></i><span>ES</span><span>R609 900</span>  
                     </div>
                 </div>
             </div>
@@ -119,14 +120,14 @@
     </section>
     
     <section class="section coupes text-white" id="coupes">
-        <div class="container px-5">
-            <div class="stitch-5 d-none d-sm-block"><img src="/images/stitch-5.png" alt=""></div>
-            <div class="stitch-6 d-none d-sm-block"><img src="/images/stitch-6.png" alt=""></div>
-            <div class="row my-5 text-xs-center">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="container px-md-5">
+            <div class="stitch-5 d-none d-md-block"><img src="/images/stitch-5.png" alt=""></div>
+            <div class="stitch-6 d-none d-md-block"><img src="/images/stitch-6.png" alt=""></div>
+            <div class="row my-5 text-center-xs">
+                <div class="col-12 col-md-4 col-lg-3">
                   <h1 class="display-4">Coupes</h1>  
                 </div>
-                <div class="col-12 col-sm-4"> 
+                <div class="col-12 col-md-4"> 
                     <span class="h4 light">Nothing else will ever come close to a Lexus Coupe</span> 
                 </div>
             </div>
@@ -149,78 +150,23 @@
                         </ul>    
                     </div> 
                     <div class="car-model-pic mx-auto">
-                      <img src="/images/lc-1.png" alt="" class="img-fluid d-inline d-block-md">  
-                      <img src="/images/lc-2.png" alt="" class="img-fluid d-inline d-block-md">  
-                      <img src="/images/lc-3.png" alt="" class="img-fluid d-inline d-block-md">  
+                        <img src="/images/lc-1.png" alt="" onclick="location.href='/model-name';"><i></i><span>RC</span><span>R609 900</span>  
+                        <img src="/images/lc-2.png" alt="" onclick="location.href='/model-name';"><i></i><span>RC</span><span>R609 900</span>  
+                        <img src="/images/lc-3.png" alt="" onclick="location.href='/model-name';"><i></i><span>LC</span><span>R609 900</span> 
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <section class="car-dealerships my-5">
-        <div class="stitch-7 d-none d-sm-block"></div>
+        <div class="stitch-7 d-none d-md-block"></div>
         <div class="container">
             <div class="row text-xs-center">
                 <div class="col my-4">                 
                     <div class="display-4">Lexus Dealerships</div>   
                 </div>
             </div>
-            <div class="row mx-auto text-center my-5">
-                    <div class="col-12 col-md-6 col-lg-4 mb-3">
-                        <div class="card text-left">
-                            <img src="/images/map.jpg" alt="" class="midrand-map">
-                             <span>Find out more about the Midrand Dealership</span>
-                            <div class="card-header">
-                                <span class="h3 text-uppercase">Midrand</span>
-                                <img src="/images/bidvest-logo-white.png" height="25" alt="" class="float-right">
-                            </div>
-                            <div class="card-body">
-                                <span class="d-block">1682 New Rd</span>
-                                <span class="d-block">Carswald</span>
-                                <span class="d-block">Midrand</span>
-                            </div>
-                            <div class="card-footer text-center">
-                                <span class="h4"><img src="/images/phone-white.png" alt=""> 012 231 4123</span>
-                            </div>
-                        </div>               
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4 mb-3">
-                       <div class="card text-left">
-                            <img src="/images/map.jpg" alt="" class="midrand-map">
-                            <span>Find out more about the Kingsmead Dealership</span>
-                            <div class="card-header">
-                                <span class="h3 text-uppercase">Kingsmead</span>
-                                <img src="/images/bidvest-logo-white.png" height="25" alt="" class="float-right">
-                            </div>
-                            <div class="card-body">
-                                <span class="d-block">1682 New Rd</span>
-                                <span class="d-block">Carswald</span>
-                                <span class="d-block">Midrand</span>
-                            </div>
-                            <div class="card-footer text-center">
-                                <span class="h4"><img src="/images/phone-white.png" alt=""> 012 231 4123</span>
-                            </div>
-                        </div>   
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4 mb-3">
-                      <div class="card text-left">
-                            <img src="/images/map.jpg" alt="" class="midrand-map">
-                             <span>Find out more about the Lynwood Dealership</span>
-                            <div class="card-header">
-                                <span class="h3 text-uppercase">Lynwood</span>
-                                <img src="/images/bidvest-logo-white.png" height="25" alt="" class="float-right">
-                            </div>
-                            <div class="card-body">
-                                <span class="d-block">1682 New Rd</span>
-                                <span class="d-block">Carswald</span>
-                                <span class="d-block">Midrand</span>
-                            </div>
-                            <div class="card-footer text-center">
-                                <span class="h4"><img src="/images/phone-white.png" alt=""> 012 231 4123</span>
-                            </div>
-                        </div>   
-                    </div>
-            </div> 
+             @Html.Partial("dealerships")
         </div>
     </section>
 </div>
