--- a/Views/Home/specials-detail.cshtml
+++ b/Views/Home/specials-detail.cshtml
@@ -20,7 +20,7 @@
     
 <div class="container car-specials car-specials-details">
     <div class="row">
-        <div class="col col-lg-7 mx-auto">
+        <div class="col col-lg-7 mx-auto px-md-7">
             <div class="card">
                 @Html.Partial("specials-item")
                 <div class="card-body">
