--- a/Views/Shared/contact.cshtml
+++ b/Views/Shared/contact.cshtml
@@ -4,7 +4,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title h3 text-uppercase light d-block" id="exampleModalLabel">Book a test drive for</h5>
+                    <h5 class="modal-title h3 text-uppercase light d-block" id="exampleModalLabel">Contact for</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>  
                     </button>
@@ -15,42 +15,32 @@
                    
                     <span class="h1">IS 200T EX</span>
 
-                    
                     <form class="p-3">
                         <div class="form-group req">
                             <label for="name2" class="mb-0">Name</label>
-                            <span></span>
                             <input type="text" name="name2" id="name2" class="form-control" placeholder="Enter your name" required="">
                             <div class="invalid-feedback">Please provide a valid input.</div>
                         </div>
 
                         <div class="form-group req">
                             <label for="email2" class="mb-0">Email</label>
-                            <span></span>
                             <input type="text" name="email2" id="email2" class="form-control" placeholder="Enter your email address" required="">
                         </div>
 
 
                         <div class="form-group req">
-                            <label for="email2" class="mb-0">Phone</label>
-                            <span></span>
+                            <label for="email2" class="mb-0">Phone</label>                    
                             <input type="text" name="email2" id="email2" class="form-control" placeholder="Enter your phone number" required="">
                         </div>
 
 
                         <div class="form-group mt-5">
                             <label for="email2" class="mb-0">Message</label>
-                            <span class="float-right text-white mb-0 pb-0"><small>Optional</small></span>
+                            <span class="float-right mb-0 pb-0"><small>Optional</small></span>
                             <textarea class="form-control" cols="20" id="txtMessage" name="Message" placeholder="" rows="3">Hi, I am interested in the Lexus CT 200H PREMIUM 2015</textarea>
                         </div>
 
-                        <div>
-                            <label>
-            <input type="checkbox" id="chkRemember" checked="">
-            Remember me
-        </label>
-                        </div>
-                        <label><input type="checkbox" id="chkFinance"> Need Finance</label>
+                        <label><input type="checkbox" id="chkFinance"> Allow Lexus to contact me</label>
                     </form>
                 </div>
                 <div class="modal-footer">
