--- a/Views/Shared/footer.cshtml
+++ b/Views/Shared/footer.cshtml
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-4 col-lg-3">
                         <ul class="list-unstyled">
-                            <li><a href="">Home</a></li>
+                            <li><a href="" class="font-weight-bold">Home</a></li>
                             <li><a href="">Specials</a></li>
                             <li><a href="">Service</a></li>
                             <li><a href="">Team</a></li>
@@ -13,7 +13,7 @@
                     </div>
                     <div class="col-4 col-lg-3">
                         <ul class="list-unstyled">
-                            <li><a href="">New Cars</a></li>
+                            <li><a href="" class="font-weight-bold">New Cars</a></li>
                             <li><a href="">Sedans</a></li>
                             <li><a href="">SUV'S</a></li>
                             <li><a href="">Coupes</a></li>
@@ -21,10 +21,18 @@
                     </div>
                     <div class="col-4 col-lg-3">
                         <ul class="list-unstyled">
-                            <li><a href="">Used</a></li>
+                            <li><a href="" class="font-weight-bold">Used</a></li>
                             <li><a href="">Sedans</a></li>
                             <li><a href="">SUV's</a></li>
                             <li><a href="">Coupses</a></li>
+                        </ul>
+                    </div>  
+                    <div class="col-4 col-lg-3">
+                        <ul class="list-unstyled">
+                            <li><a href="" class="font-weight-bold">Dealers</a></li>
+                            <li><a href="">Lynwood</a></li>
+                            <li><a href="">Midrand</a></li>
+                            <li><a href="">Kingsmead</a></li>
                         </ul>
                     </div>              
                 </div>            
@@ -34,10 +42,9 @@
                     
                     <div class="col-4 col-lg-3">
                         <ul class="list-unstyled">
-                            <li><a href="">Terms & Conditions</a></li>
+                            <li><a href="">Terms &amp; Conditions</a></li>
                             <li><a href="">Club McCarthy</a></li>
                             <li><a href="">Bidvest Insurance</a></li>
-                            <li><a href="">Coupses</a></li>
                         </ul>
                     </div>
                     <div class="col-4 col-lg-3">
@@ -45,7 +52,6 @@
                             <li><a href="">Privacy Policy</a></li>
                             <li><a href="">McCarthy</a></li>
                             <li><a href="">My Lexus App</a></li> 
-                            <li><a href="">Coupses</a></li>             
                         </ul>
                     </div>
                     
