--- a/Views/Shared/specials-listings.cshtml
+++ b/Views/Shared/specials-listings.cshtml
@@ -1,6 +1,6 @@
 
     <div class="row mx-auto w-100-md-down">
-        <div class="col-12 col-lg-6 col-xl-4 car-special-listing">
+        <div class="col-12 col-md-6 col-xl-4 car-special-listing">
             <a href="/specials-detail">
                 <img src="/images/specials-1.jpg" alt="" class="img-fluid">
                 <span class="">ES 300H EX 2.0 FWD (Hybrid)</span>
@@ -9,7 +9,7 @@
                 <span class="">R28 000</span>                
             </a>
         </div>
-        <div class="col-12 col-lg-6 col-xl-4 car-special-listing">
+        <div class="col-12 col-md-6 col-xl-4 car-special-listing">
             <a href="/specials-detail"> 
                 <img src="/images/specials-2.jpg" alt="" class="img-fluid">
                 <span class="">GS300EX (Auto)</span>
@@ -18,7 +18,7 @@
                 <span class="">R30 000</span>
             </a>
         </div>
-        <div class="col-12 col-lg-6 col-xl-4 car-special-listing">
+        <div class="col-12 col-md-6 col-xl-4 car-special-listing">
             <a href="/specials-detail"> 
                 <img src="/images/specials-3.jpg" alt="" class="img-fluid">
                 <span class="">NX 300 E</span>
@@ -27,7 +27,7 @@
                 <span class="">R20 000</span>
             </a>
         </div>
-        <div class="col-12 col-lg-6 col-xl-4 car-special-listing">
+        <div class="col-12 col-md-6 col-xl-4 car-special-listing">
             <a href="/specials-detail">
                 <img src="/images/specials-1.jpg" alt="" class="img-fluid">
                 <span class="">ES 300H EX 2.0 FWD (Hybrid)</span>
@@ -36,7 +36,7 @@
                 <span class="">R28 000</span>                
             </a>
         </div>
-        <div class="col-12 col-lg-6 col-xl-4 car-special-listing">
+        <div class="col-12 col-md-6 col-xl-4 car-special-listing">
             <a href="/specials-detail"> 
                 <img src="/images/specials-2.jpg" alt="" class="img-fluid">
                 <span class="">GS300EX (Auto)</span>
@@ -45,7 +45,7 @@
                 <span class="">R30 000</span>
             </a>
         </div>
-        <div class="col-12 col-lg-6 col-xl-4 car-special-listing">
+        <div class="col-12 col-md-6 col-xl-4 car-special-listing">
             <a href="/specials-detail"> 
                 <img src="/images/specials-3.jpg" alt="" class="img-fluid">
                 <span class="">NX 300 E</span>
