--- a/wwwroot/scss/ark/buttons.scss
+++ b/wwwroot/scss/ark/buttons.scss
@@ -4,7 +4,7 @@
 	line-height: 55px;
 	height: 55px;
 	padding: 0 45px;
-	border: none;
+//	border: none;
 	font-weight: 700;
 	font-family: $headings-font-family;
 	text-transform: uppercase;
