--- a/wwwroot/scss/pages/models.scss
+++ b/wwwroot/scss/pages/models.scss
@@ -7,27 +7,28 @@ body {
     .car-specs-model { 
         .list-inline {
             margin-top: 50px;
-            
+            transition: ease-in 0.4s;       
             &:emtpy span:nth-of-type(1) {
                 display: none;     
-            }
+            }  
             .list-inline-item {    
                 margin: 1px -2px;
                 height: 320px;
                 width: 137px;
                 transform: skewX(-20deg);
-                
                 @include media-breakpoint-down(md) {
                     width: 100px;
-                }
+                    height: 280px;
+                }  
                 
-               
-                &.is:hover {            
+                &.is:hover {    
+                    transition: background 0.4s ease-in;
                     background-image: url('/images/is-slant.png');
                     span:nth-of-type(1){
                         display: block;
                     }
                 }  
+                
                 &.es-hybrid:hover { 
                     background-image: url('/images/lc-slant.png');
                     span:nth-of-type(1){
@@ -94,15 +95,12 @@ body {
                         display: block;
                     }
                 }
-
                 &:hover { 
                     background:rgba(0, 0, 0, 0.18);
                     margin: 0px -2px;
                     color:white;        
                 }
-
                 span:nth-of-type(1){
-                    
                     font-weight:bold;
                     font-size:1.3em;
                     color:black;
@@ -138,48 +136,143 @@ body {
         margin-bottom: 200px;
         position: relative;
         width:100%;
-        
         @include media-breakpoint-down(sm) {
             margin-top: 0;
-           
+            
+            img { 
+                &:hover { 
+                    filter:contrast(120%); 
+                    cursor: pointer;
+                }
+
+            }
+         
         }
         
-        @include media-breakpoint-down(md) {
-            max-width:80%;
-        }
+        span:nth-of-type(1) {           
+            position: absolute;
+            top:-10px;
+            left:0;
+            font-size:2.4em;
+            font-weight: bold;
+            
+            @include media-breakpoint-up(md) {
+                display: none;
+            } 
+        } 
         
-        img { 
-            @include media-breakpoint-down(sm) {
-                display: block;
-                padding:30px 0;
-                border-bottom: 1px solid black;
+        span:nth-of-type(2) {           
+            position: absolute;
+            top:0;
+            right:0;
+            font-size:1.2em;
+            font-weight: bold;
+            &:before { 
+                content:'From';
+                font-weight: normal;
+                margin-right:5px;
+            }
+            @include media-breakpoint-up(md) {
+                display: none;
             }
         }
+        span:nth-of-type(3) {           
+            position: absolute;
+            top:180px;
+            left:0;
+            font-size:2.4em;
+            font-weight: bold;
+            @include media-breakpoint-up(md) {
+                display: none;
+            }
+        } 
+        span:nth-of-type(4) {           
+            position: absolute;
+            top: 190px;
+            right: 0;
+            font-size: 1.2em;
+            font-weight: bold;
+            @include media-breakpoint-up(md) {
+                display: none;
+            }
+            &:before { 
+                content:'From';
+                font-weight: normal;
+                margin-right:5px;
+            }
+        }
+        span:nth-of-type(5) {           
+            position: absolute;
+            top:356px;
+            left:0;
+            font-size:2.4em;
+            font-weight: bold;
+            @include media-breakpoint-up(md) {
+                display: none;
+            }
+        } 
+        span:nth-of-type(6) {           
+            position: absolute;
+            top:365px;
+            right:0;
+            font-size:1.2em;
+            font-weight: bold;
+            @include media-breakpoint-up(md) {
+                display: none;
+            }
+            &:before { 
+                content:'From';
+                font-weight: normal;
+                margin-right:5px;
+            }
+        }
+        
+            img { 
+                @extend .img-fluid; 
+                @include media-breakpoint-down(sm) {
+                    display: block;
+                    padding:30px 0;
+                    border-bottom: 1px solid black;
+                    height:180px;
+                    margin:auto; 
+                }
+            }
+       
         
         img:nth-of-type(1) {
             position: absolute;
             top:0;
             left:-25%;
             z-index: 10;
+            
+            @include media-breakpoint-only(md) {
+                width:80%;
+                left:-20%;
+            }
+            
             @include media-breakpoint-up(lg) {
                 left:-10%;
             }
             @include media-breakpoint-down(sm) {
+                display: block;
                 position: static;
-                margin:20px 0;
-                &:before { 
-                content:'Hello';
-                }
-            }
+            }         
         }
+        
         img:nth-of-type(2) {
             position: absolute;
             top:0;
             left:5%;
             z-index: 9;
+            @include media-breakpoint-only(md) {
+                width:80%;
+                left:10%;
+            }
+            
             @include media-breakpoint-up(lg) {
                 left:20%;
             }
+
             @include media-breakpoint-down(sm) {
                 display: block;
                 position: static;
@@ -190,9 +283,16 @@ body {
             top:0;
             left:28%;
             z-index: 8;
+            
+            @include media-breakpoint-only(md) {
+                width:80%;
+                left:40%;
+            }
+            
             @include media-breakpoint-up(lg) {
                 left:40%;
             }
+            
             @include media-breakpoint-down(sm) {
                 display: block;
                 position: static;
@@ -272,46 +372,24 @@ body {
         
     }
     .car-dealerships { 
-        
-        .stitch-7 { 
-            background-image: url(/images/stitch-2.png); 
-            width: 100%;
-            height: 20px;
-            margin-top: -38px;
+        a { 
+            transition: all 0.4s cubic-bezier(.25,.8,.25,1); 
+            border-radius:8px;
+            display: block;
+            text-decoration: none;
         }
-        .card {       
-            img.midrand-map  {
-                display: none;
-                + span { 
-                    display:none;
-                }
-            }
-            box-shadow: 1px 1px 50px rgba(0, 0, 0, 0.8);
-            .card-header,.card-footer { border:none;background: transparent;}
+            
+        a:hover {
+            box-shadow: 0 10px 30px rgba(0,0,0,0.3), 0 10px 40px rgba(0,0,0,0.3); 
+        }
+        
+        .card {    
             background-image: url('/images/paper-texture.jpg');
             color:white;
             border:none;
-            &:hover {
-                img.midrand-map  {                
-                    height: 204px;
-                    display: block;
-                    cursor: pointer;
-                    ~ .card-header {display: none;}
-                    ~ .card-body {display: none;}
-                    ~ .card-footer {display: none;}   
-                    & + span { 
-                        display: block;
-                        position: absolute;
-                        bottom:0;
-                        left:0;
-                        width:100%;
-                        background:black;
-                        color:white;
-                        text-align: center;
-                        padding:4px;
-                    }
-                }
-            }
+            .card-header,.card-footer { 
+                border:none;background: transparent;
+            }        
         }
     }
     .sedans { 
@@ -319,6 +397,9 @@ body {
         background-size: cover;
         padding-bottom: 140px;
         overflow: hidden;
+        @include media-breakpoint-down(sm) {
+            padding-bottom: 0;
+        }
         .stitch-2 { 
             background-image: url('/images/sedan-panel.png');
             position: absolute;
@@ -336,6 +417,9 @@ body {
         overflow: hidden;
         margin-top: -124px;
         z-index: 2;
+        @include media-breakpoint-down(sm) {
+            padding-bottom: 0;
+        }
         
             &:before { 
             content: '';
@@ -372,6 +456,9 @@ body {
         margin-top: -122px; 
         z-index: 1;
         overflow: hidden;
+        @include media-breakpoint-down(sm) {
+            margin-top: -80px; 
+        }
         &:before { 
             content: '';
             position: absolute;
@@ -416,12 +503,19 @@ body {
         z-index: 1000;
         .car-specs { 
             .list-inline {
-                color:white;
                 text-transform: uppercase;
+                font-weight: normal;
                 & .list-inline-item { 
-                    color:white;
                     height: 60px;
                     padding: 0 30px;
+                    margin:0 -2px;   
+                    &.active { 
+                        color:white;
+                        font-weight: bold;
+                        a { 
+                            border-bottom:2px solid white;
+                        }
+                    }
                 
                 &:hover { 
                     cursor: pointer;  
@@ -432,25 +526,147 @@ body {
                         display: block;
                         font-size: 1em;
                         transform: skewX(20deg);
-                        font-weight: bold;
+                        
                         padding-top: 20px;
-                        img { margin-right:10px;}
+                        
+                        img { 
+                            margin-right:10px;
+                        }
                         
                         a {
                             color:white;
                             text-decoration: none;
                         }
+                        .dropdown {
+                            top:-20px;
+                            left:-40px;
+                            .dropdown-menu { 
+                                width:100%;
+                                background:$gray-200;
+
+                                .dropdown-item {         
+                                    font-weight:bold;
+                                    & span { 
+                                        font-weight:normal;
+                                        position: absolute;
+                                        right:10px;
+                                    } 
+                                }
+                                a { 
+                                    color:black;
+                                    text-align: center;
+                                }
+                            }
+                        }
                     }
                 }
+                
+                & .list-inline-item:nth-child(4) { 
+                    padding-top:0;
+                    position: relative;
+                    a { 
+                        font-size:0.8em;
+                    }
 
+                    & span:last-child {
+                        position: absolute;
+                        font-size: 0.7em;
+                        left: 74px;
+                        top: 40px;
+                        padding-top: 0;
+                    }    
+                }
                 & .list-inline-item:last-child {     
                     background:$blue;
                     padding:0 40px;
-                    &:hover { cursor: pointer;  background:#000045;}
+                    &:hover { 
+                        cursor: pointer;  
+                        background:#000045;
+                    }
                 }
 
             }
         }
+    }
+    .main-cta-mobile { 
+        position: fixed;
+        height:60px;
+        background:$blue;
+        bottom:0;
+        left:0;
+        width:100%;
+        z-index: 1000;
+            .car-specs {
+                .list-inline {
+                    color: black;
+                    text-transform: uppercase;
+
+                    & .list-inline-item {
+                        color: white;
+                        height: 60px;
+                        padding: 0 30px;
+
+                        &:hover {
+                            cursor: pointer;
+                            background: #000045;
+                        }
+
+                        span {
+                            display: block;
+                            font-size: 0.8em;
+
+                            font-weight: bold;
+                            padding-top: 20px;
+                            img {
+                                margin-right: 10px;
+                            }
+
+                            a {
+                                color: white;
+                                text-decoration: none;
+                            }
+                            .dropdown {
+                                top: -20px;
+                                left: -40px;
+                                .dropdown-menu {
+                                    width: 100%;
+                                    background: $gray-200;
+
+                                    .dropdown-item {
+                                        font-weight: bold;
+                                        & span {
+                                            font-weight: normal;
+                                            position: absolute;
+                                            right: 10px;
+                                        }
+                                    }
+                                    a {
+                                        color: black;
+                                        text-align: center;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                
+                & .list-inline-item:nth-child(4) { 
+                   
+                    position: relative;
+                    a { 
+                        font-size:0.8em;
+                    }
+
+                    & span:last-child {
+                        position: absolute;
+                        font-size: 0.7em;
+                        left: 74px;
+                        top: 40px;
+                        padding-top: 0;
+                    }    
+                }
+            }
+        }
+        
     }
     .book-test-drive { 
         color:black!important;
@@ -738,21 +954,16 @@ body {
                 color:white;
                 width:100%;
                 margin-left: 13px;
+                padding-right: 27px;
+                text-align: right;
                 @extend .edge--skew;
+            }
+            .nav-link { 
+                text-align: right;
             }
         }
         
         
-    }
-    .car-dealerships { 
-        .card {    
-            background-image: url('/images/paper-texture.jpg');
-            color:white;
-            border:none;
-            .card-header,.card-footer { 
-                border:none;background: transparent;
-            }        
-        }
     }
     .hero-club { 
         color:white;   
@@ -780,6 +991,27 @@ body {
         .dropdown-item { 
             font-weight:bold;
           
+        }
+    } 
+    .car-dealerships { 
+        a { 
+            transition: all 0.4s cubic-bezier(.25,.8,.25,1); 
+            border-radius:8px;
+            display: block;
+            text-decoration: none;
+        }
+            
+        a:hover {
+            box-shadow: 0 10px 30px rgba(0,0,0,0.3), 0 10px 40px rgba(0,0,0,0.3); 
+        }
+        
+        .card {    
+            background-image: url('/images/paper-texture.jpg');
+            color:white;
+            border:none;
+            .card-header,.card-footer { 
+                border:none;background: transparent;
+            }        
         }
     }
 }
